@@ -2,6 +2,7 @@ v0.1.1 (unstable)
 - Removed check for settings shortcut (skins are now recommended to always provide alternative settings access)
 - Video library shortcuts are loaded from video library node files (test)
 - Video and music playlists are now grouped together
+- Option to use edit control for label and action in management dialog
 - Live TV renamed to PVR
 - Support for managing widgets, backgrounds
 - Support for custom menu lists in skinsettings.xml
